chip overflow bug fixed

--- a/client/app/shared/components/cp-typeahead/cp-typeahead.component.scss
+++ b/client/app/shared/components/cp-typeahead/cp-typeahead.component.scss
@@ -93,7 +93,8 @@ textarea {
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.3);
   }
 
-  &__overflow-unset {
-    overflow: unset !important;
+  &__custom-css {
+    overflow: unset;
+    max-height: unset;
   }
 }
